netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-tetragon-from-prometheus
  namespace: kube-system
  labels:
    app.kubernetes.io/name: tetragon
    app.kubernetes.io/instance: tetragon
    app.kubernetes.io/component: agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: tetragon
      app.kubernetes.io/name: tetragon
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prometheus-system
    ports:
    - port: 2112
      protocol: TCP
    - port: 2113
      protocol: TCP
  policyTypes:
  - Ingress
